# lattice

./: .gitignore  CLAUDE.md  README.md  REPL_IMPLEMENTATION.md  STORY_6.1_SUMMARY.md  lattice-dogfood.yaml  lattice-test-tester.yaml  pyproject.toml
.github/workflows/: ci.yml
src/lattice/: __init__.py  background_loop.py  cli.py  constants.py  heartbeat.py  memory_monitor.py  pidfile.py  shutdown.py
src/lattice/agent/: __init__.py  builtin_tools.py  cli_bridge.py  helpers.py  llm_agent.py  memory_profile.py  providers.py  script_bridge.py  tools.py
src/lattice/commands/: down.py  init.py  replay.py  up.py  watch.py
src/lattice/config/: __init__.py  models.py  parser.py
src/lattice/router/: __init__.py  router.py  topology.py
src/lattice/session/: __init__.py  models.py  recorder.py
tests/: test_builtin_tools.py  test_cli.py  test_cli_bridge.py  test_config.py  test_error_handling.py  test_heartbeat.py  test_init.py  test_llm_agent.py  test_loop_mode.py  test_memory_profile.py  test_providers.py  test_repl.py  test_replay.py  test_review_fixes.py  test_router.py  test_script_bridge.py  test_session.py  test_shutdown.py  test_watch.py
