[project]
name = "lattice-cli"
version = "0.1.0"
description = "Lattice CLI — declarative dev-environment orchestrator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.scripts]
lattice = "lattice.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lattice"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9.0",
    "mypy>=1.13",
    "types-pyyaml>=6.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
